maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:25: error: class Tuple2 takes type parameters
  def nexts(i:Int):List[Tuple2] ={
                        ^ShortestPathMaze:25: error: class Tuple2 takes type parameters
  def nexts(i:Int):List[Tuple2] ={
                        ^ShortestPathMaze:26: error: class Tuple2 takes type parameters
    var next:List[Tuple2] = List.nil
                  ^ShortestPathMaze:26: error: class Tuple2 takes type parameters
    var next:List[Tuple2] = List.nil
                  ^ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List[Tuple2] = List.nil
                                 ^ShortestPathMaze:47: error: class Tuple2 takes type parameters
  var nextCase:List[Tuple2]=List.nil
                    ^ShortestPathMaze:47: error: class Tuple2 takes type parameters
  var nextCase:List[Tuple2]=List.nil
                    ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List[Tuple2]=List.nil
                                 ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                    ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                      ^